use openDialog instead of open to get around security manager when opening console. r=rginda/a=asa, bug 59748